简单实现 socket通信+jdk动态代理+jdk反射+jdk序列化

--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,14 @@
         <module>proxy-demo</module>
     </modules>
 
+    <dependencies>
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 </project>
