--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <lombok.version>1.18.12</lombok.version>
         <log4j.version>2.9.0</log4j.version>
         <slf4j.version>1.7.25</slf4j.version>
+        <netty.version>4.1.42.Final</netty.version>
+        <kryo.version>4.0.2</kryo.version>
     </properties>
     <dependencies>
         <!-- lombok -->
