--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,10 @@
         <slf4j.version>1.7.25</slf4j.version>
         <netty.version>4.1.42.Final</netty.version>
         <kryo.version>4.0.2</kryo.version>
+        <curator-version>5.0.0</curator-version>
+        <!-- test -->
+        <junit.jupiter.version>5.5.2</junit.jupiter.version>
+        <junit.platform.version>1.5.2</junit.platform.version>
     </properties>
     <dependencies>
         <!-- lombok -->
